--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -24,6 +24,9 @@
        .name {
          text-align: center;
          width: 100%;
-         height: auto;
+       }
+       .body{
+         height: 100%;
+         padding-bottom: 70%;
        }
      }
