--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,10 +1,12 @@
   .footer {
       grid-area: f;
-      width: 100%;
+      width: 50%;
+      margin: auto;
   }
 
   .f_item {
-      margin-left: 38%;
+      width: 50%;
+      margin: auto;
   }
 
   .logo {
@@ -22,9 +24,14 @@
 
   @media only screen and (max-width: 800px) {
       .footer {
-          width: 80%;
+          width: 100%;
+          margin: auto;
       }
       .logo {
           padding: 0;
+      }
+      .f_item {
+          width: 50%;
+          margin: auto;
       }
   }
