--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,37 +1,26 @@
-  .footer {
+  .icon_bar {
       grid-area: f;
-      width: 50%;
-      margin: auto;
-  }
-
-  .f_item {
-      width: 50%;
-      margin: auto;
+      width: 25%;
+      margin: 0 auto;
   }
 
   .logo {
-      font-size: 24px;
       color: white;
-      padding: 10px 50px;
-      overflow: hidden;
-      transition: 0.2s;
+      padding: 10%;
+      font-size: 24px;
   }
 
-  .logo :hover {
-      background: #7510F7;
-      box-shadow: 0 0 10px #7510F7, 0 0 10px #7510F7, 0 0 10px #7510F7;
+  .logo:hover {
+      color: #7510F7;
   }
 
   @media only screen and (max-width: 800px) {
-      .footer {
+      .icon_bar {
           width: 100%;
-          margin: auto;
+          text-align: center;
       }
       .logo {
-          padding: 0;
-      }
-      .f_item {
-          width: 50%;
-          margin: auto;
+          font-size: 24px;
+          padding: 10%;
       }
   }
