--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -7,7 +7,7 @@
 
      .text {
        text-transform: uppercase;
-       padding-top: 390px;
+       padding-top: 17%;
        font-size: 56px;
        text-align: center;
        color: white;
@@ -21,7 +21,6 @@
 
      @media only screen and (max-width: 800px) {
        .name {
-         margin-top: -50%;
          text-align: center;
          width: 50%;
        }
