--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -27,6 +27,7 @@
        .body {
          border-bottom: 1px solid #7510F7;
          height: 100%;
-         padding-bottom: 70%;
+         padding-top: 50%;
+         padding-bottom: 50%;
        }
      }
