--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -12,7 +12,8 @@ header {
 
 .mobile_nav {
     background-color: #7510F7;
-    position: absolute;
+    position: fixed;
+    top: 0;
 }
 
 .nav_link {
