--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -26,6 +26,17 @@
        }
        .body {
          border-bottom: 1px solid #7510F7;
-         padding-top: 40%;
+         padding-top: 10vh;
+       }
+     }
+
+     @media only screen and (max-width: 800px) {
+       .name {
+         text-align: center;
+         width: 50%;
+       }
+       .body {
+         border-bottom: 1px solid #7510F7;
+         padding-top: 20vh;
        }
      }
