--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -16,7 +16,7 @@
 
   @media only screen and (max-width: 1600px) {
       .icon_bar {
-          width: 100%;
+          width: 100vh;
           text-align: center;
       }
       .logo {
