--- a/src/components/Image/image.css
+++ b/src/components/Image/image.css
@@ -40,3 +40,9 @@
          padding-top: 20vh;
        }
      }
+
+     @media only screen and (max-height: 395px) {
+       .body {
+         padding-top: 10vh;
+       }
+     }
